# game_backend

./: .gitignore  CMakeLists.txt
src/: AppComponent.hpp  main.cpp
src/assets/buildings/: forum.json  mine.json  potion-shop.json  tavern.json
src/assets/characters/: knight.json
src/assets/state/: state.json
src/controller/: MyController.hpp
src/dto/: DTOs.hpp  Tier.hpp
src/dto/buildings/: Building.hpp
src/dto/state/: GoldState.hpp
src/models/: DTOs.hpp  Tier.hpp
src/models/buildings/: Building.cpp  Building.hpp
src/models/staff/: capacity-effect.hpp  capacity.hpp  character-inventory.hpp  character-stat.hpp  character.hpp
src/models/state/: BuildingState.hpp  CharacterState.hpp  GoldState.hpp  ManaState.hpp  State.hpp
src/utils/: ObjectFileMapper.hpp
test/: MyControllerTest.cpp  MyControllerTest.hpp  Tests.cpp
test/app/: MyApiTestClient.hpp  TestComponent.hpp
